# protobuf-vala

./: .bzrignore  .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac  descriptor.pb.vala  meson.build  plugin.pb.vala  protobuf.vapi  protoc-gen-vala.vala
src/: Makefile.am  config.vala.in  descriptor.pb.vala  meson.build  plugin.pb.vala  protobuf-vala.pc.in  protobuf-vala.vala  protobuf.vapi  protoc-gen-vala.vala  test-decode.vala  test-encode.vala  test.proto
